# scran_blocks

./: CMakeLists.txt  README.md
.github/workflows/: check-install.yaml
cmake/: Config.cmake.in
docs/: Doxyfile  _formulas.tex  _formulas_dark.tex  annotated.html  average__vectors_8hpp.html  average__vectors_8hpp_source.html  block__weights_8hpp.html  block__weights_8hpp_source.html  classes.html  classscran__blocks_1_1SingleQuantile-members.html  classscran__blocks_1_1SingleQuantile.html  classscran__blocks_1_1SingleQuantileVariable-members.html  classscran__blocks_1_1SingleQuantileVariable.html  dir_bdabb9492db2368b3caf0f4c1df6a160.html  dir_cb79c9749187d5f7fb48eb0283e4f469.html  doxygen_crawl.html  files.html  functions.html  functions_func.html  functions_vars.html  index.html  namespacemembers.html  namespacemembers_enum.html  namespacemembers_func.html  namespaces.html  namespacescran.html  namespacescran_1_1average__vectors.html  namespacescran_1_1block__weights.html  namespacescran__blocks.html  parallel__means_8hpp.html  parallel__means_8hpp_source.html  parallel__quantiles_8hpp.html  parallel__quantiles_8hpp_source.html  scran_8hpp.html  scran_8hpp_source.html  scran__blocks_8hpp.html  scran__blocks_8hpp_source.html  scran_blocks.tag  scran_core_utils.tag  structscran_1_1block__weights_1_1VariableParameters-members.html  (+4 more)
docs/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  classes_0.js  enums_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_3.js  namespaces_0.js  pages_0.js  pages_1.js  pages_2.js  pages_3.js  searchdata.js  variables_0.js  variables_1.js
include/scran/: average_vectors.hpp  block_weights.hpp
include/scran_blocks/: average_vectors.hpp  block_weights.hpp  parallel_means.hpp  parallel_quantiles.hpp  scran_blocks.hpp  utils.hpp
tests/: CMakeLists.txt
tests/src/: average_vectors.cpp  block_weights.cpp  parallel_means.cpp  parallel_quantiles.cpp
